added --enable-preview for kapt